adding output folders

--- a/tutorials/Tutorial 1.ipynb
+++ b/tutorials/Tutorial 1.ipynb
@@ -84,14 +84,14 @@
     "sys.path.insert(0, os.path.abspath(CODE_PATH))\n",
     "# sys.path.insert(0, os.path.abspath(\"./FRmatch\"))\n",
     "import FRmatch\n",
-    "\n",
     "import anndata as ad\n",
     "import scanpy as sc\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "import pickle\n",
     "pd.set_option('display.max_rows', 100)\n",
-    "pd.set_option('display.max_columns', 50)"
+    "pd.set_option('display.max_columns', 50)\n",
+    "output_dir = \"../outputs_tutorial1\""
    ]
   },
   {
@@ -501,7 +501,7 @@
     "# results_layer1toMTG = FRmatch.FRmatch_cluster2cluster(adata_layer1, adata_mtg, cluster_header_query = \"cluster_membership\", \n",
     "#                                                       cluster_header_ref = \"Clusters\", \n",
     "#                                                       subsamp_size = 10, subsamp_iter = 1000, \n",
-    "#                                                       save_as = \"results_layer1toMTG_R_size10_iter1000.pkl\")\n",
+    "#                                                       save_as = f\"{output_dir}/results_layer1toMTG_R_size10_iter1000.pkl\")\n",
     "# # Wall time: 15min 11s - results_layer1toMTG_R_size10_iter100\n",
     "# # Wall time: 2h 33min 27s - results_layer1toMTG_R_size10_iter1000\n",
     "# # Wall time: 7h 8min 3s - results_layer1toMTG_R_size20_iter1000"
